update orval config for better front management
