# backend/src/entrypoints/api/openApi/openapi.json
@@ -1,5 +1,23 @@
 {
   "openapi": "3.1.0",
+  "tags": [
+    {
+      "name": "public",
+      "description": "Public API"
+    },
+    {
+      "name": "protected",
+      "description": "Protected API"
+    },
+    {
+      "name": "internal",
+      "description": "Internal API"
+    },
+    {
+      "name": "admin",
+      "description": "Admin API"
+    }
+  ],
   "info": {
     "version": "1.0.0",
     "title": "My API"
@@ -89,8 +107,12 @@
     "parameters": {}
   },
   "paths": {
-    "/api/admin/user/:id": {
+    "/api/admin/user/{id}": {
       "get": {
+        "tags": [
+          "admin",
+          "user"
+        ],
         "parameters": [
           {
             "schema": {
@@ -161,6 +183,10 @@
     },
     "/api/public/auth/login": {
       "post": {
+        "tags": [
+          "public",
+          "auth"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -212,6 +238,10 @@
     },
     "/api/public/auth/register": {
       "post": {
+        "tags": [
+          "public",
+          "auth"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -263,6 +293,10 @@
     },
     "/api/public/auth/refresh": {
       "post": {
+        "tags": [
+          "public",
+          "auth"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -312,6 +346,10 @@
     },
     "/api/public/auth/reset-password": {
       "post": {
+        "tags": [
+          "public",
+          "auth"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -349,6 +387,10 @@
     },
     "/api/public/auth/reset-password-request": {
       "post": {
+        "tags": [
+          "public",
+          "auth"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -383,6 +425,10 @@
     },
     "/api/public/auth/validate-account": {
       "post": {
+        "tags": [
+          "public",
+          "auth"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -428,6 +474,10 @@
     },
     "/api/public/auth/resend-validation-email": {
       "post": {
+        "tags": [
+          "public",
+          "auth"
+        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -472,6 +522,10 @@
     },
     "/api/public/healthcheck": {
       "get": {
+        "tags": [
+          "public",
+          "healthcheck"
+        ],
         "responses": {
           "200": {
             "description": "Healthcheck OK",
